Fix AC xPP page title alignment
Issue-Id: RICPLT-1576

--- a/webapp-frontend/src/app/ac-xapp/ac-xapp.component.scss
+++ b/webapp-frontend/src/app/ac-xapp/ac-xapp.component.scss
@@ -19,8 +19,6 @@
  */
 
  .ac__section {
-    position: relative;
-    top: -50px;
 }
 
 .ac__header {
